Re-arrange charts on page (#18)
Co-authored-by: Eric Kim <erickim195@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,14 @@ svg {
   font-size: 12px;
 }
 
-.row {
+.column {
   display: flex;
   justify-content: center;
+}
+
+.second {
+  display: flex;
+  flex-direction: column;
 }
 
 #mpa-rating-button-container {
