--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,18 @@ svg {
     min-height: 100%;
     z-index: -5;
   }
+
+  #banner {
+    background-position: center;
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #title {
+    text-align: center;
+    font-family: 'ZCOOL KuaiLe', cursive;
+    font-size: 50px;
+    color:  black;
+  }
