--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ svg {
   font-size: 12px;
 }
 
+.row {
+  display: flex;
+  justify-content: center;
+}
+
 .column {
   display: flex;
   justify-content: center;
@@ -20,66 +25,37 @@ svg {
   flex-direction: column;
 }
 
-#mpa-rating-button-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.mpa-rating-button {
-  margin: 10px;
-}
-
-#innovation-chart {
-  background-color: #FFFAFA;
-}
-
-#innov-header {
+.chart-header {
+  font-family: arial;
   font-size: 18px;
   font-weight: bold;
 }
 
-#innov-x-axis, #innov-y-axis {
+.grid-chart-mark-labels, .grid-chart-label {
   font-size: 15px;
   font-weight: bold;
 }
 
-#tooltip {
-  position: absolute;
-  opacity: 1;
-  background: #fff;
-  box-shadow: 2px 2px 3px 0px rgb(92 92 92 / 0.5);
-  border: 1px solid #ddd;
-  font-size: 12px;
-  font-weight: 600;
-  padding: 2px 8px;
-}
-
-.tooltip-label {
-  font-weight: 500;
-  font-size: 10px;
-  color: black;
-}
-
 #backgroundVideo {
-    position: fixed;
-    left: 0;
-    top: 0;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -5;
-  }
+  position: fixed;
+  left: 0;
+  top: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -5;
+}
 
-  #banner {
-    background-position: center;
-    display: block;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
+#banner {
+  background-position: center;
+  display: block;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  #title {
-    text-align: center;
-    font-family: 'ZCOOL KuaiLe', cursive;
-    font-size: 50px;
-    color:  black;
-  }
+#title {
+  text-align: center;
+  font-family: 'ZCOOL KuaiLe', cursive;
+  font-size: 50px;
+  color:  black;
+}
