--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,12 @@ svg {
   font-size: 50px;
   color:  black;
 }
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
