--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,7 @@ svg {
 .center {
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 530px;
   left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+
 }
