--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,30 @@ td {
 #disney {
   background-color: #007ae6;
 }
+
+#pie-chart-tooltip {
+  position: absolute;
+  background: white;
+  opacity: 0;
+  box-shadow: 2px 2px 3px 0px rgb(92 92 92 / 0.5);
+  border: 1px solid #ddd;
+  font-size: 15px;
+  font-weight: 100;
+  padding: 3px 3px 3px 3px;
+}
+.pie-chart-tooltip-label {
+  font-weight: 200;
+  font-size: 10px;
+  color: 'black';
+}
+
+.pie-chart-list {
+  background-color: white;
+  font-size: 13px;
+  /* font-weight: bold; */
+}
+
+.pie-bold {
+  font-weight: bold;
+}
+
