--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ svg {
   font-size: 15px;
   font-weight: 100;
   padding: 3px 3px 3px 3px;
+  z-index: -5;
 }
 .pie-chart-tooltip-label {
   font-weight: 200;
