feat: Complete design of entire application (#75)
* Adjust formatting for buttons, fonts, and charts layout

* Create more division between widget categories

* Lessen division between widget categories

* Adjust description text

* Increase size of MultiViewPieCharts

* Change button format

* Rename MPAA to MPA

* Change mpa ratings button color

* Add CSS property to fix bartip not popping up

* Add emoji to BarTip

* Add hover handler to deal with button background color

* Impose correct MPA ratings ordering

* Add grouping by widget category

* Remove unnecessary spacing in html text

* Adjust pie chart arc label design

* Adjust BarChart and PieChart tooltips

--- a/css/input-range.css
+++ b/css/input-range.css
@@ -1,15 +1,21 @@
 .range-slider-container {
-  width: 900px;
-  text-align: center;
+  width: 600px;
+  text-align: left;
+  margin-left: 45px;
+}
+
+.rangeValues {
+  font-weight: bold;
+  margin-left: 25px;
 }
 
 /* SCSS taken from: https://codepen.io/rendykstan/pen/VLqZGO and converted to CSS*/
 section.range-slider {
   position: relative;
   margin: auto;
-  width: 750px;
+  width: 600px;
   height: 75px;
-  text-align: center;
+  text-align: left;
 }
 section.range-slider input[type="range"] {
   pointer-events: none;
@@ -24,7 +30,7 @@ section.range-slider input[type="range"] {
   overflow: hidden;
   left: 0;
   top: 30px;
-  width: 750px;
+  width: 600px;
   outline: none;
   height: 20px;
   margin: 0;
